# haze-demo

./: README.md  hadui.yaml  shell.nix  stack.yaml
demo/: README.md  haze-demo.cabal  package.yaml
demo/src/: PoC.hs
hadui/: hadui-custom.js
